// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component destroys gracefully if it is initially frozen 1`] = `
Array [
  Object {
    "componentInstanceId": "component-destroys-gracefully-if-it-is-initially-frozen__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component destroys gracefully if onDestroy causes freeze 1`] = `
Array [
  Object {
    "componentInstanceId": "component-destroys-gracefully-if-ondestroy-causes-freeze__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/div/0/text",
              "text": "Hello, World!",
            },
          ],
          "data": Object {},
          "key": "/0/div",
          "sel": "div",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-destroys-gracefully-if-ondestroy-causes-freeze__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component destroys gracefully if onInit is frozen 1`] = `
Array [
  Object {
    "componentInstanceId": "component-destroys-gracefully-if-oninit-is-frozen__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/div/0/text",
              "text": "Hello, World!",
            },
          ],
          "data": Object {},
          "key": "/0/div",
          "sel": "div",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-destroys-gracefully-if-oninit-is-frozen__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component fails to render due to instant external memory overload 1`] = `
Array [
  Object {
    "componentInstanceId": "component-fails-to-render-due-to-instant-external-memory-overload__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/div/0/text",
              "text": "Hello, World!",
            },
          ],
          "data": Object {},
          "key": "/0/div",
          "sel": "div",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-fails-to-render-due-to-instant-external-memory-overload__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component fails to render due to instant heap memory overload 1`] = `
Array [
  Object {
    "componentInstanceId": "component-fails-to-render-due-to-instant-heap-memory-overload__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/div/0/text",
              "text": "Hello, World!",
            },
          ],
          "data": Object {},
          "key": "/0/div",
          "sel": "div",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-fails-to-render-due-to-instant-heap-memory-overload__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component user interaction 1`] = `
Array [
  Object {
    "componentInstanceId": "component-user-interaction__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-user-interaction__component",
    "payload": Object {
      "updateId": 2,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/1/h1/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "component-user-interaction__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;

exports[`component user interaction 2`] = `
Array [
  "ComponentInstance object has id: true
",
  "You've clicked a button!
",
  "destroyed!
",
]
`;

exports[`elements paths 1`] = `
Object {
  "drayman-button": "../../framework/node_modules/@drayman/elements/dist/button/main.js",
  "drayman-checkbox": "../../framework/node_modules/@drayman/elements/dist/checkbox/main.js",
  "drayman-claviz-charts": "../../framework/node_modules/@drayman/elements/dist/claviz-charts/main.js",
  "drayman-datepicker": "../../framework/node_modules/@drayman/elements/dist/datepicker/main.js",
  "drayman-file-uploader": "../../framework/node_modules/@drayman/elements/dist/file-uploader/main.js",
  "drayman-menu": "../../framework/node_modules/@drayman/elements/dist/menu/main.js",
  "drayman-nebula": "../../framework/node_modules/@drayman/elements/dist/nebula/main.js",
  "drayman-ngx-charts": "../../framework/node_modules/@drayman/elements/dist/ngx-charts/main.js",
  "drayman-ngx-graph": "../../framework/node_modules/@drayman/elements/dist/ngx-graph/main.js",
  "drayman-number-field": "../../framework/node_modules/@drayman/elements/dist/number-field/main.js",
  "drayman-pdf-viewer": "../../framework/node_modules/@drayman/elements/dist/pdf-viewer/main.js",
  "drayman-radio-group": "../../framework/node_modules/@drayman/elements/dist/radio-group/main.js",
  "drayman-select": "../../framework/node_modules/@drayman/elements/dist/select/main.js",
  "drayman-table": "../../framework/node_modules/@drayman/elements/dist/table/main.js",
  "drayman-text-field": "../../framework/node_modules/@drayman/elements/dist/text-field/main.js",
  "drayman-textarea-field": "../../framework/node_modules/@drayman/elements/dist/textarea-field/main.js",
  "drayman-timepicker": "../../framework/node_modules/@drayman/elements/dist/timepicker/main.js",
  "drayman-youtube-player": "../../framework/node_modules/@drayman/elements/dist/youtube-player/main.js",
}
`;

exports[`trying to perform event on non-existing component instance result in an error 1`] = `
Array [
  Object {
    "componentInstanceId": "trying-to-perform-event-on-non-existing-component-instance-result-in-an-error__component",
    "payload": Object {
      "updateId": 1,
      "view": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "key": "/0/button/0/text",
              "text": "Hello, world!",
            },
          ],
          "data": Object {
            "on": Object {
              "click": true,
            },
          },
          "key": "/0/button",
          "sel": "button",
        },
        Object {
          "children": Array [],
          "data": Object {},
          "key": "/1/h1",
          "sel": "h1",
        },
      ],
    },
    "type": "view",
  },
  Object {
    "componentInstanceId": "trying-to-perform-event-on-non-existing-component-instance-result-in-an-error__component",
    "payload": Object {},
    "type": "componentInstanceDestroyed",
  },
]
`;
